Updated stats again

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -10,18 +10,23 @@
     </p>
 
     <p>
-      We wanted to confirm to you that league finals will be held <strong>Saturday, December 10th, at 10am</strong>.  All teams will play two games.
+      Due to a scheduling conflict we will be changing the date of finals date, to the following day.
     </p>
 
     <p>
-      As for jerseys, stats & standings, we are working on providing them, and apologize sincerely for the delay.  We do have the stats page up, but are missing the past three weeks of data.
+      We wanted to notify you that league finals will now be held <strong>Sunday, December 11th, at 10am in Ives Estates Park</strong>.  All teams will play two games.
     </p>
 
-    <div style="text-align:center">
-      <a href="http://sflultimate.com/stats" style="font-family:-apple-system,blinkmacsystemfont,'segoe ui',roboto,helvetica,arial,sans-serif,'apple color emoji','segoe ui emoji','segoe ui symbol';font-size:18px;line-height:25px;color:white;background-image:initial;background-position:initial;background-size:initial;background-repeat:initial;background-origin:initial;background-clip:initial;background-color:rgb(51,51,51);display:inline-block;padding:15px 30px;margin:0px;text-transform:uppercase;border-radius:5px;font-weight:bold;text-decoration:none">
-        View Stats
-      </a>
-    </div>
+    <p>
+      The park address is:<br>
+      <strong>Ives Estates Park</strong><br>
+      20901 NE 16th Ave<br>
+      Miami, FL 33179
+    </p>
+
+    <p>
+      Please be sure to spread the word to your teammates and remind them that finals will be at Ives Estates and <strong>not</strong> at Amelia.  There will be a soccer game ending at 10am that day, and promptly after we'll begin our tournament.
+    </p>
 
     <p>
       Should you have any questions or issues, please feel free to reach out to our e-mail at <strong>sflultimate@gmail.com</strong>.
