--- a/templates/views/stats.jade
+++ b/templates/views/stats.jade
@@ -14,7 +14,7 @@ block content
         .alert.alert-info
           i.fa.fa-info-circle
           strong  Incomplete Stats: 
-          span We still are missing stats from: Black, Blue, and Pink on Week 2 and Blue on Week 3.
+          span We still are missing stats from: Black, Blue, and Pink on Week 2 and Blue on Week 3 and Green on Week 6.
 
       h2 Leaderboard
 
