--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -10,30 +10,19 @@
     </p>
 
     <p>
-      Due to a scheduling conflict we will be changing the date of finals date, to the following day.
+      It has been raining in Amelia much of today. While it is still drizzling out now, park staff believe we will most likely still be able to play tonight.
     </p>
 
     <p>
-      We wanted to notify you that league finals will now be held <strong>Sunday, December 11th, at 10am in Ives Estates Park</strong>.  All teams will play two games.
+      But fields may close if forecast changes.
     </p>
 
     <p>
-      The park address is:<br>
-      <strong>Ives Estates Park</strong><br>
-      20901 NE 16th Ave<br>
-      Miami, FL 33179
+      As soon as we get a final word from the parks, we'll be sure to notify you via e-mail tonight's game.  Just keep an eye out for our messages.
     </p>
 
     <p>
-      Please be sure to spread the word to your teammates and remind them that finals will be at Ives Estates and <strong>not</strong> at Amelia.  There will be a soccer game ending at 10am that day, and promptly after we'll begin our tournament.
-    </p>
-
-    <p>
-      Should you have any questions or issues, please feel free to reach out to our e-mail at <strong>sflultimate@gmail.com</strong>.
-    </p>
-
-    <p>
-      See you next week!<br>
+      Thanks!<br>
       South Florida Ultimate
     </p>
   </div>
