Change finals date

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -10,19 +10,15 @@
     </p>
 
     <p>
-      It has been raining in Amelia much of today. While it is still drizzling out now, park staff believe we will most likely still be able to play tonight.
+     We just got word from park staff. 
     </p>
 
     <p>
-      But fields may close if forecast changes.
+      Fields will be slightly wet and weather a bit cloudy, but we are good to play (assuming no lightning).
     </p>
 
     <p>
-      As soon as we get a final word from the parks, we'll be sure to notify you via e-mail tonight's game.  Just keep an eye out for our messages.
-    </p>
-
-    <p>
-      Thanks!<br>
+      See you there!<br>
       South Florida Ultimate
     </p>
   </div>
