Minor formatting changes

--- a/templates/views/sheets.jade
+++ b/templates/views/sheets.jade
@@ -68,8 +68,7 @@ html
               td(style='width: 25%')
 
         p.text-muted
-          em Please fill out and return to SFL Ultimate staff
-          .  Stats allow us to determine awards (MVP, assist, score, defensive leaders) for each gender as well as help us resolve seeding for the tournament. Thank you!
+          em Please fill out and return to SFL Ultimate staff.  Stats allow us to determine awards (MVP, assist, score, defensive leaders) for each gender as well as help us resolve seeding for the tournament. Thank you!
 
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js')
     script(src='/js/sheets.js')
