--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -10,15 +10,15 @@
     </p>
 
     <p>
-     We just got word from park staff. 
+     We wanted to drop a friendly reminder that we still have two more games, one tomorrow (November 29th) and one on December 6th.
     </p>
 
     <p>
-      Fields will be slightly wet and weather a bit cloudy, but we are good to play (assuming no lightning).
+      Additionally, please be sure to notify your teammates that league finals will be held at <strong>Ives Estates Park</strong> on Sunday, December 11th.
     </p>
 
     <p>
-      See you there!<br>
+      Hope you had a great break!<br>
       South Florida Ultimate
     </p>
   </div>
