--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -20,7 +20,7 @@ block content
           img.logo-circled.img-responsive(src='/images/logo-circled.png')
         .col-sm-8
           h1 Welcome!
-          p Check out this season's schedule.  Stats to come soon!
+          p Check out this season's schedule.  More sats to come soon!
           //- a.btn.btn-primary.btn-lg(href="/register")
             //- i.fa.fa-sign-in
             //- |  Register Now!
@@ -55,21 +55,21 @@ block content
                 //- th Point Diff
               tbody
                 tr
+                  td Black
+                  td 6
+                  td 3
+                tr
                   td Green
                   td 6
-                  td 2
+                  td 3
                 tr
                   td Pink
-                  td 4
-                  td 4
-                tr
-                  td Black
                   td 5
-                  td 3
+                  td 4
                 tr
                   td Blue
                   td 1
-                  td 7
+                  td 8
 
 
 block js
