--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -10,15 +10,21 @@
     </p>
 
     <p>
-     We wanted to drop a friendly reminder that we still have two more games, one tomorrow (November 29th) and one on December 6th.
+      We wanted to send you a friendly reminder that finals will be this Sunday, December 11th at 10am in <strong>Ives Estates Park</strong>.
     </p>
 
     <p>
-      Additionally, please be sure to notify your teammates that league finals will be held at <strong>Ives Estates Park</strong> on Sunday, December 11th.
+      Please note that the fields are turf fields.
     </p>
 
     <p>
-      Hope you had a great break!<br>
+      The park address is:<br>
+      20901 NE 16th Ave<br>
+      Miami, FL 33179
+    </p>
+
+    <p>
+      See you then!<br>
       South Florida Ultimate
     </p>
   </div>
