--- a/public/styles/site/_variables.scss
+++ b/public/styles/site/_variables.scss
@@ -1,6 +1,8 @@
 // Override Bootstrap variables in this file, e.g.
 
 $font-size-base: 16px;
-$font-family-sans-serif: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$headings-font-family: "Roboto Condensed", $font-family-sans-serif;
-$headings-font-weight: 700
+$font-family-sans-serif: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$headings-font-family: "Oswald", $font-family-sans-serif;
+$headings-font-weight: 700;
+
+$navbar-height: 84px;
